fixed balance cal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,6 +127,14 @@ input[type="number"] {
   appearance: textfield;
 }
 
+/* Prevent wheel scrolling on number inputs */
+input[type="number"] {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 /* Target all number inputs specifically */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
